fix(vbtn): fix VBtn custom loader content overflow

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -135,7 +135,7 @@
   height: 100%
   justify-content: center
   left: 0
-  position: absolute
+  position: relative
   top: 0
   width: 100%
 
@@ -241,7 +241,7 @@
   transition: none
 
   .v-btn__content
-    opacity: 0
+    display: none
 
 .v-btn--outlined
   border: $btn-outline-border-width solid currentColor
